# one_tui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: auth.rs  files_list.rs  main.rs
src/api/: delete_item.rs  download.rs  fetch_folders.rs  mkdir.rs  mod.rs  refetch_folder.rs  upload.rs
src/tui/: app.rs  confirm_delete.rs  download_area.rs  info.rs  input_popup.rs  metadata.rs  mod.rs  notification.rs  popup.rs  root.rs  sidebar.rs
