[package]
name = "one_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
oauth2 = "4.4.2"
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["blocking" , "json"]}
serde = { version = "1.0.130", features = ["derive"]}
url = "2.5.3"
ratatui = "0.29"
crossterm = "0.25"
tokio = "1.41.1"
chrono = "0.4.38"
