[package]
name = "one_tui"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
oauth2 = "4.4.2"
reqwest = { version = "0.12.9", features = ["blocking" , "json"]}
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.68"
url = "2.5.3"
ratatui = "0.29"
crossterm = "0.25"
tokio = { version = "1.41.1" , features = ["full"]}
chrono = "0.4.38"
dirs-next = "2.0.0"
nerd-font-symbols = "0.2.0"
toml = "0.8.19"
native-dialog = "0.7.0"
tiny_http = "0.12.0"
